--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11070,6 +11070,90 @@ header.masthead .masthead-heading {
   opacity: 0.3;
 }
 
+#company .company-item {
+  max-width: 26rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+#company .company-item .company-link {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+}
+#company .company-item .company-link .company-hover {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 200, 0, 0.9);
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity ease-in-out 0.25s;
+}
+#company .company-item .company-link .company-hover .company-hover-content {
+  font-size: 1.25rem;
+  color: white;
+}
+#company .company-item .company-link:hover .company-hover {
+  opacity: 1;
+}
+#company .company-item .company-caption {
+  padding: 1.5rem;
+  text-align: center;
+  background-color: #fff;
+}
+#company .company-item .company-caption .company-caption-heading {
+  font-size: 1.5rem;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-weight: 700;
+  margin-bottom: 0;
+}
+#company .company-item .company-caption .company-caption-subheading {
+  font-style: italic;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.company-modal .modal-dialog {
+  margin: 1rem;
+  max-width: 100vw;
+}
+.company-modal .modal-content {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  text-align: center;
+}
+.company-modal .modal-content h2, .company-modal .modal-content .h2 {
+  font-size: 3rem;
+  line-height: 3rem;
+}
+.company-modal .modal-content p.item-intro {
+  font-style: italic;
+  margin-bottom: 2rem;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+.company-modal .modal-content p {
+  margin-bottom: 2rem;
+}
+.company-modal .modal-content ul.list-inline {
+  margin-bottom: 2rem;
+}
+.company-modal .modal-content img {
+  margin-bottom: 2rem;
+}
+.company-modal .close-modal {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+  background-color: transparent;
+}
+.company-modal .close-modal:hover {
+  opacity: 0.3;
+}
+
 .timeline {
   position: relative;
   padding: 0;
